# renew-pay

./: .gitignore  README.md
client/: .env.example  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/dashboard/: page.tsx
client/app/developers/: page.tsx
client/lib/: api.ts  auth.ts  content.ts  customers.ts  dashboard.ts  developers.ts  governance.ts  invoices.ts  markets.ts  media.ts  notifications.ts  onboarding.ts  payments.ts  plans.ts  playground.ts  settings.ts  subscriptions.ts  teams.ts  treasury.ts
client/types/: dashboard-data.ts  dashboard.ts  marketing.ts  privy-react-auth.d.ts
contracts/: Anchor.toml  Cargo.toml
contracts/programs/renew_protocol/: Cargo.toml
contracts/programs/renew_protocol/src/: args.rs  constants.rs  errors.rs  events.rs  lib.rs
contracts/programs/renew_protocol/src/instructions/: admin.rs  merchant.rs  mod.rs  plans.rs  settlement.rs  subscriptions.rs  treasury.rs
contracts/programs/renew_protocol/src/state/: config.rs  cycle.rs  merchant.rs  mod.rs  plan.rs  receipt.rs  subscription.rs
contracts/programs/renew_protocol/src/utils/: math.rs  mod.rs  payouts.rs  token.rs
contracts/programs/renew_protocol/src/validation/: billing.rs  fx.rs  ids.rs  mod.rs
contracts/programs/renew_protocol/tests/: invoice_settlement.rs  payout_controls.rs  subscription_flow.rs
contracts/programs/renew_protocol/tests/common/: harness.rs  mod.rs
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/scripts/: init-protocol-config.cjs
server/src/: app.ts
(+179 files in other folders)
